--- a/P0/IG2App/IG2App.vcxproj
+++ b/P0/IG2App/IG2App.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="EntityClass.h" />
+    <ClInclude Include="RenderTargetListener.h" />
     <ClInclude Include="Sinbad.h" />
     <ClInclude Include="IG2ApplicationContext.h" />
     <ClInclude Include="IG2App.h" />
@@ -131,6 +132,7 @@
     <ClCompile Include="IG2Main.cpp" />
     <ClCompile Include="IG2App.cpp" />
     <ClCompile Include="Plano.cpp" />
+    <ClCompile Include="RenderTargetListener.cpp" />
     <ClCompile Include="Sinbad.cpp" />
     <ClCompile Include="Toy.cpp" />
   </ItemGroup>
